fixed spacing issue on blog and archive pages

--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -193,3 +193,10 @@ blockquote {
       background: #f7f7f7;
   }
 }
+
+/* Article list in blog and archive page */
+.article-list {
+  margin: 1em 0;
+}
+
+
